--- a/twitter/app/views/layouts/_navbar.html.erb
+++ b/twitter/app/views/layouts/_navbar.html.erb
@@ -15,7 +15,9 @@
 
                 <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    User
+                    <% if user_signed_in? %>
+                        <%= current_user.username %>
+                    <% end%>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-lg-end">
                     
